# fsearch-rs

.github/: copilot-instructions.md
.github/workflows/: ci.yml
rust/: ARCHITECTURE_PLAN.md  Cargo.toml  MAPPING.md  MIGRATION_ROADMAP.md  README.md
rust/fsearch-core/: ARCHITECTURE.md  Cargo.toml
rust/fsearch-core/bench/: bench_jit.sh
rust/fsearch-core/benches/: pcres_jit_bench.rs  rust_match_bench.rs
rust/fsearch-core/c_parity/: Makefile  c_matcher  c_matcher.c
rust/fsearch-core/include/: fsearch_ffi.h
rust/fsearch-core/src/: entry.rs  index.rs  lib.rs  match_engine.rs  matchers.rs  pcre2_backend.rs  pcre2_pool.rs  search.rs
rust/fsearch-core/src/query/: lexer.rs  matcher.rs  mod.rs  parser.rs  parser2.rs  parser_rs.rs
rust/fsearch-core/tests/: normalization.rs  parity_c_matcher.rs
rust/fsearch-core/tools/: bench_rust_matcher.rs
rust/qt-client/: CMakeLists.txt  README.md  build-and-run.sh  filter_editor.cpp  filter_editor.h  main.cpp  preferences.cpp  preferences.h  repro_minimal  repro_minimal.cpp
rust/qt-client/repro/: main.cpp  qt_repro
rust/qt-client/tests/: gui_test.cpp  minimal_test  minimal_test.cpp  queued_updates_test.cpp
rust/qt-client/tools/: integration_test.cpp
