[package]
name = "fsearch-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "fsearch_core"
crate-type = ["staticlib", "rlib"]

[dependencies]
cxx = "1.0"
rayon = "1.7"
crossbeam-channel = "0.5"
unicode-normalization = "0.1"
regex = "1"
once_cell = "1.18"
parking_lot = "0.12"
pcre2 = "0.2"
unicode-segmentation = "1.10"
serde_json = "1.0"
tempfile = "3"

[dev-dependencies]
criterion = "0.4"

[[bin]]
name = "bench_rust_matcher"
path = "tools/bench_rust_matcher.rs"
